fixed issues: centred logo text, removed padding from socials to centre them, centred hover text on gallery images, styled form text, re-arranged gallery images for nicer spacing, fixed issue whereby image aspect ratios weren't staying true

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,8 +43,7 @@ h1 {
 
 #logo-box {
     display: flex;
-    justify-content: space-between;
-    /* this centering doesn't seem to work */
+    justify-content: space-around;
     margin: 0 auto;
 }
 
@@ -187,6 +186,11 @@ nav ul {
     margin: 0 20px 20px 0;
 }
 
+ul#networks {
+    margin: 0;
+    padding-inline-start: 0px;
+}
+
 #networks i:hover {
     text-shadow:  -1px 1px 12px #763943;
 }
@@ -212,7 +216,7 @@ nav ul {
 }
   
 .image-gallery li img {
-    object-fit: cover;
+    object-fit: contain;
     width: 100%;
     height: 100%;
     vertical-align: middle;
@@ -229,7 +233,6 @@ nav ul {
     flex-grow: 999;
   }
 
-  /* hover test*/
 .overlay {
     display: none;
     padding: 0px;
@@ -246,7 +249,9 @@ nav ul {
 }
 
 img:hover + span {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 /* Form */
@@ -311,5 +316,6 @@ img:hover + span {
 }
 
 #query {
+    font-family: inherit;
     width: 100%;
 }
